# poco-triggers-client

./: build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/ru/n08i40k/poco/triggers/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .clang-format  .clang-tidy  CMakeLists.txt
app/src/main/cpp/run/: start.sh
app/src/main/cpp/src/: constants.h  daemonize.cpp  daemonize.h  device_utils.cpp  device_utils.h  fts_lock.cpp  fts_lock.h  main.cpp  server.cpp  server.h  touch_emulator.cpp  touch_emulator.h  virt_device.cpp  virt_device.h  xm_watcher.cpp  xm_watcher.h
app/src/main/java/ru/n08i40k/poco/triggers/: Application.kt  MainActivity.kt
app/src/main/java/ru/n08i40k/poco/triggers/daemon/: DaemonBridge.kt  DaemonClient.kt  DaemonMessage.kt
app/src/main/java/ru/n08i40k/poco/triggers/model/: AppViewModel.kt
app/src/main/java/ru/n08i40k/poco/triggers/proto/: SettingsSerializer.kt
app/src/main/java/ru/n08i40k/poco/triggers/receiver/: BootCompletedReceiver.kt
app/src/main/java/ru/n08i40k/poco/triggers/service/: AccessibilityService.kt  KeyInterceptorService.kt  OverlayService.kt
app/src/main/proto/: settings.proto
app/src/main/res/values/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml  service_config.xml
app/src/test/java/ru/n08i40k/poco/triggers/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+23 files in other folders)
